# nigiri

./: .clang-format  .clang-tidy.in  .gitignore  .pkg  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  EXPLANATION.md  LICENSE  README.md  assistance.csv  assistance.orig.csv  gtfs-realtime.proto  resolve.py
.claude/: CLAUDE.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  gpu.yml  unix.yml
benchmark/: main.cc
cmake/: buildcache.cmake  clang-tidy.cmake  pkg.cmake
dev/: mapper.cc  reader.cc  shared.h  writer.cc  writer2.cc
exe/: benchmark.cc  benchmark_a_star.cc  export.cc  finalize.cc  g_bm.cc  import.cc  qa.cc  run_meat.cc  run_meat_csa.cc  slice.cc  sngl.cc  vdv_update.cc
importer/: main.cc
include/: tg.h
include/nigiri/: abi.h  byte_sizes.h  clasz.h  connection.h  constants.h  day_bits.h  delay_prediction.h  direct.h  export_gtfs.h  fares.h  flex.h  footpath.h  for_each_meta.h  geometry.h  get_otel_tracer.h  keys.h  lb_entry.h  location.h  location_match_mode.h  logging.h  print_transport.h  profiles.h  resolve.h  scoped_timer.h  seated_transfer.h  shape.h  shapes_storage.h  slice.h  special_stations.h  stop.h  string_store.h  td_footpath.h  timetable.h  timetable_metrics.h  translations_view.h  types.h  types2.h
rust/: .gitignore  CMakeLists.txt  Cargo.toml  schema.generated.graphql
rust/cpp/include/nigiri/: rust.h
rust/cpp/include/nigiri/rust/: routing.h  timetable.h
rust/cpp/src/: routing.cc  rust.cc  timetable.cc
rust/docs/: 00-architecture-overview.md  01-phase0-foundation.md  02-phase1-import-timetable.md  03-phase2-tag-lookup.md  04-phase3-core-routing.md  05-phase4-street-routing.md  06-phase5-footpath-computation.md  07-phase6-realtime-updates.md  08-phase7-gbfs.md  09-phase8-flex.md  10-phase9-odm.md  11-phase10-elevators.md  12-phase11-geocoding.md  13-phase12-shapes.md  14-phase13-journey-formatting.md
rust/include/nigiri/: rust.h
rust/nigiri/: Cargo.toml
rust/nigiri-sys/: Cargo.toml  build.rs
rust/nigiri-sys/src/: lib.rs
rust/nigiri/src/: lib.rs
rust/nigiri/tests/: integration_test.rs
rust/nigiri/tests/fixtures/gtfs/: agency.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
rust/src/: main.rs
rust/transit-adr/: Cargo.toml
rust/transit-adr/src/: area_database.rs  area_set.rs  cache.rs  categories.rs  formatter.rs  guess.rs  import_context.rs  lib.rs  ngram.rs  normalize.rs  reverse.rs  score.rs  sift4.rs  suggestion.rs  suggestions.rs  typeahead.rs  types.rs
rust/transit-core/: Cargo.toml
rust/transit-core/src/: config.rs  error.rs  lib.rs  polyline.rs  tag_lookup.rs  types.rs
rust/transit-import/: Cargo.toml
rust/transit-import/src/: hashes.rs  lib.rs  osr_import.rs  rtree.rs
rust/transit-osr/: Cargo.toml
rust/transit-osr/examples/: load_ways.rs
rust/transit-osr/src/: data.rs  elevation_storage.rs  geojson.rs  lib.rs  location.rs  lookup.rs  platforms.rs  point.rs  types.rs  ways.rs
rust/transit-osr/src/extract/: extract.rs  mod.rs  tags.rs
rust/transit-osr/src/preprocessing/: mod.rs
rust/transit-osr/src/preprocessing/elevation/: dem_driver.rs  dem_tile.rs  hgt_driver.rs  hgt_tile.rs  hgt_tile_def.rs  mod.rs  provider.rs  resolution.rs  shared.rs
rust/transit-osr/src/routing/: additional_edge.rs  algorithms.rs  bidirectional.rs  bidirectional_profile.rs  dial.rs  dijkstra.rs  mod.rs  mode.rs  parameters.rs  path.rs  profile.rs  route.rs  sharing_data.rs  tracking.rs  with_profile.rs
rust/transit-osr/src/routing/profiles/: bike.rs  bike_sharing.rs  car.rs  car_parking.rs  car_sharing.rs  foot.rs  mod.rs
rust/transit-osr/src/util/: infinite.rs  mod.rs  multi_counter.rs  reverse.rs
rust/transit-osr/test/luisenplatz/: metadata.json
rust/transit-osr/tests/: README.md  algorithm_comparison_tests.rs  integration_routing.rs  level_tests.rs  multi_way_test.rs  restriction_tests.rs  routing_tests.rs  serialization_test.rs  simple_integration_tests.rs
rust/transit-routing/: Cargo.toml
rust/transit-routing/src/: lib.rs  router.rs  street.rs  types.rs
rust/transit-server/: Cargo.toml
rust/transit-server/src/: app_data.rs  gql_types.rs  main.rs  schema.rs
server/: main.cc
src/: abi.cc  clasz.cc  delay_prediction.cc  fares.cc  flex.cc  geometry.cc  location.cc  logging.cc  print_transport.cc  resolve.cc  scoped_timer.cc  section_db.cc  shape.cc  shapes_storage.cc  slice.cc  tg.cc  timetable.cc  timetable_metrics.cc  trip_update.cc
src/common/: day_list.cc  gunzip.cc  indent.cc  mam_dist.cc  parse_date.cc  parse_time.cc
src/gtfs_export/: export_gtfs.cc
src/hrd/: category.cc  timezone.cc
src/loader/: assistance.cc  build_footpaths.cc  build_lb_adjacency.cc  dir.cc  init_finish.cc  link_nearby_stations.cc  load.cc  loader_interface.cc  merge_duplicates.cc  permutate_locations.cc  permutate_timetable.cc  reduce_footpaths.cc  register.cc
src/lookup/: get_transport.cc  get_transport_stop_tz.cc
src/qa/: qa.cc
src/query_generator/: generator.cc  nigiri_generator.cc  query_generator.cc
src/routing/: ch_query.cc  clasz_mask.cc  component_graph.cc  dijkstra.cc  direct.cc  get_fastest_direct.cc  gpu.cu  gpu_raptor.cu  gpu_raptor_state.cu  gpu_timetable.cu  hmetis.cc  journey.cc  lb_raptor.cc  lb_transit_legs.cc  leg_alternatives.cc  min_legs.cc  one_to_all.cc  ontrip_train.cc  placeholder_create_td_offset.cc  query.cc  raptor.cc  raptor_n_to_all.cc  raptor_search.cc  raptor_state.cc  reach.cc  reconstruct.cc  search_state.cc  start_times.cc
src/rt/: create_rt_timetable.cc  frun.cc  gtfsrt_alert.cc  gtfsrt_resolve_run.cc  gtfsrt_resolve_trip.cc  gtfsrt_update.cc  json_to_xml.cc  rt_timetable.cc  service_alert.cc  trip_update.cc  util.cc  vdv_aus.cc  vdv_update.cc
test/: abi_test.cc  add_test.cc  cuda_test.cc  db_test.cc  delta_t_test.cc  dir_test.cc  interval_test.cc  main.cc  mam_dist_test.cc  mcraptor_search.cc  mcraptor_search.h  parse_time_test.cc  raptor_search.cc  raptor_search.h  raptor_test.cc  rt_test.cc  shape_test.cc  shape_test.h  td_footpath_test.cc  test_dir.h.in  util.h
tools/: ubsan-suppress.txt
(+622 files in other folders)
