[package]
name = "srv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2", "macros"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["env", "cargo", "derive"] }
cxx = "1.0"
hyper = { version = "1.1.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
cxx-build = "1.0"
