[package]
name = "transit-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Import pipeline for loading timetables and building spatial indices"

[dependencies]
transit-core = { path = "../transit-core" }
nigiri = { path = "../nigiri" }
transit-osr = { path = "../transit-osr" }
rstar = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
